--- a/Project.01-HTML/style1.css
+++ b/Project.01-HTML/style1.css
@@ -4,17 +4,27 @@ html {
     padding: 0;
 }
 
+[data-theme="light"] {
+    --color-bg: lightblue;
+    --color-fg: black;
+ }
+ 
+ [data-theme="dark"] {
+    --color-bg: darkblue;
+    --color-fg: white;
+ }
 
 body {
     text-transform: uppercase;
-    background-color: darkblue;
+    background-color: var(--color-bg);
+    color: var(--color-fg);
     height: 100%;
     width: 100%;
 }
 
 /* atur navigasi */
 .navigasi {
-    background-color:lightblue;
+    background-color: var(--color-bg);
     width: 100%;
     height: 100%;
 }
@@ -29,8 +39,20 @@ body {
 }
 .teks-nav {
     float: right;
-    color: black;
+    color: var(--color-fg);
     text-decoration: none;
+}
+
+.dl-button {
+        font-size: 15px;
+        font-weight: bold;
+        transition: all var(--global-transition-time) ease-in-out;
+        border-radius: 2px;
+        cursor: pointer;
+        color: var(--color-fg);
+        background-color: var(--color-bg);
+        border: 5px solid var(--color-fg);
+        float: right;
 }
 
 /* isi */
@@ -41,14 +63,14 @@ body {
     height: auto;
     background-color: none;
     margin: 100px;
-    color: white;
+    color: var(--color-fg);
 }
 
 /* atur index */
 
 .sisip{
     text-decoration: none;
-    color: white;
+    color: var(--color-fg);
 }
 .sisip:hover {
     transition: .2s;
@@ -57,7 +79,7 @@ body {
 /* atur contact */
 .con-text{
     text-decoration: none;
-    color: white;
+    color: var(--color-fg);
 }
 .con-text:hover {
     transition: .2s;
@@ -67,7 +89,7 @@ body {
 /* atur blog */
 .blog-tab div{
     display: none;
-    color: white;
+    color: var(--color-fg);
   }
   
 .blog-tab div:target{
@@ -77,7 +99,7 @@ body {
 .blog-nav{
     display: block;
     text-align: left;
-    color: white;
+    color: var(--color-fg);
     text-decoration: none;
 }
 .blog-nav:hover{
@@ -94,7 +116,7 @@ body {
     text-align:justify;
 }
 .disini{
-    color: white;
+    color: var(--color-fg);
     text-decoration: none;
 }
 .disini:hover{
@@ -106,14 +128,14 @@ body {
 /* atur gallery */
 .gal-box{
     margin: 5px;
-    border: 1px solid white;
+    border: 1px solid var(--color-fg);
     float: left;    
     width: 200px;
     height: 200px;
 }
 
 .gal-a{
-    color: white;
+    color: var(--color-fg);
     text-decoration: none;
 }
 .gal-a:hover{
